--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "rest-express",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "prisma-read-replica",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "generate-read-replica": "prisma-read-replica generate --schema /prisma/schema.prisma"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-client": "npx prisma generate --schema ./prisma.schema"
   },
+  "bin": "bin/prisma-read-replica.mjs",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "3.9.2",
-    "express": "4.17.3",
-    "prisma-read-replica": "file:../prisma-read-replica"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.13",
-    "@types/node": "16.11.26",
-    "prisma": "3.9.2",
-    "ts-node": "10.5.0",
-    "typescript": "4.5.5"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "@getvim/execute": "^1.0.0",
+    "@prisma/client": "^3.9.2",
+    "@prisma/sdk": "^3.10.0",
+    "abstract-syntax-tree": "^2.20.5",
+    "get-installed-path": "^4.0.8",
+    "ncp": "^2.0.0",
+    "prisma": "^3.10.0",
+    "yargs": "^17.3.1"
   }
 }
