--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "generate-client": "npx prisma generate --schema ./prisma.schema"
   },
   "bin": "bin/prisma-read-replica.mjs",
@@ -19,5 +19,11 @@
     "ncp": "^2.0.0",
     "prisma": "^3.10.0",
     "yargs": "^17.3.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2"
   }
 }
