--- a/package.json
+++ b/package.json
@@ -2,31 +2,41 @@
   "name": "prisma-read-replica-middleware",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "engines": {
     "node": ">=12.6"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "jest",
-    "generate-client": "npx prisma generate --schema ./prisma.schema"
+    "generate-client": "npx prisma generate --schema ./prisma.schema",
+    "clean": "rimraf dist",
+    "build": "npm run clean && rollup -c && rollup --config bin-rollup.config.js"
   },
-  "bin": "src/bin/prisma-read-replica.mjs",
+  "bin": "dist/bin/prisma-read-replica.js",
   "license": "Apache-2.0",
   "maintainers": [
     "Andrew Carlson <carlson@prisma.io>"
   ],
   "dependencies": {
     "@getvim/execute": "^1.0.0",
+    "@prisma/client": "^3.13.0",
     "@prisma/sdk": "^3.10.0",
     "get-installed-path": "^4.0.8",
     "prisma": "^3.10.0",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@types/get-installed-path": "^4.0.1",
     "@types/jest": "^27.4.1",
     "@types/ncp": "^2.0.5",
     "jest": "^27.5.1",
     "prettier": "2.5.1",
+    "rimraf": "^3.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   }
